--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
-AM_CPPFLAGS = -DSTUBBYCONFDIR=\"$(sysconfdir)/stubby\"
+AM_CPPFLAGS = -DSTUBBYCONFDIR=\"$(sysconfdir)/stubby\" -DRUNSTATEDIR=\"$(runstatedir)\"
 bin_PROGRAMS = stubby
 stubby_SOURCE = stubby.c
