Install stubby-setdns-macos.sh in $(prefix)/sbin

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,4 @@
 stubbyconfdir = $(sysconfdir)/stubby
 dist_stubbyconf_DATA = stubby.conf.example
+dist_sbin_SCRIPTS = stubby-setdns-macos.sh
 SUBDIRS=src
