1) Update README 2) Install a default config file if one doesn’t already exist 3) Fix up some local logging

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,3 +2,7 @@ stubbyconfdir = $(sysconfdir)/stubby
 dist_stubbyconf_DATA = stubby.conf.example
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
 SUBDIRS=src
+
+install-data-hook:
+	test -f ${stubbyconfdir}/stubby.conf || \
+		${INSTALL_DATA} ${srcdir}/stubby.conf.example ${stubbyconfdir}/stubby.conf
