Remove libtool and instructions since it isn't being used. prefer clang over gcc if it's available.

--- a/configure.ac
+++ b/configure.ac
@@ -4,8 +4,7 @@ AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/stubby.c])
 AC_CONFIG_HEADERS([config.h])
 
-LT_INIT
-AC_PROG_CC
+AC_PROG_CC([clang gcc])
 
 AC_CHECK_LIB([getdns], [getdns_context_set_logfunc],,
 	[AC_MSG_ERROR([Missing dependency: getdns >= 1.1.2 ])],)
