First pass at switching default config file to YAML. Needs testing! Need to detect YAML support properly.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 stubbyconfdir = $(sysconfdir)/stubby
-dist_stubbyconf_DATA = stubby.conf.example
+dist_stubbyconf_DATA = stubby.yaml.example
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
 SUBDIRS=src
 
 install-data-hook:
-	test -f ${stubbyconfdir}/stubby.conf || \
-		${INSTALL_DATA} ${srcdir}/stubby.conf.example ${stubbyconfdir}/stubby.conf
+	test -f ${stubbyconfdir}/stubby.yaml || \
+		${INSTALL_DATA} ${srcdir}/stubby.yaml.example ${stubbyconfdir}/stubby.yaml
