--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 stubbyconfdir = $(sysconfdir)/stubby
-dist_stubbyconf_DATA = stubby.yaml.example
+dist_stubbyconf_DATA = stubby.yml.example
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
 SUBDIRS=src
 
 install-data-hook:
-	test -f ${stubbyconfdir}/stubby.yaml || \
-		${INSTALL_DATA} ${srcdir}/stubby.yaml.example ${stubbyconfdir}/stubby.yaml
+	test -f ${stubbyconfdir}/stubby.yml || \
+		${INSTALL_DATA} ${srcdir}/stubby.yml.example ${stubbyconfdir}/stubby.yml
