Create osx subdir for MacOS-specific items, conditionally built if target is a Mac.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,11 @@
+if BUILD_MAC
+    MAYBE_MAC = osx
+endif
+SUBDIRS = src $(MAYBE_MAC)
+
 stubbyconfdir = $(sysconfdir)/stubby
 dist_stubbyconf_DATA = stubby.conf.example
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
-SUBDIRS=src
 
 install-data-hook:
 	test -f ${stubbyconfdir}/stubby.conf || \
