--- a/osx/Makefile.am
+++ b/osx/Makefile.am
@@ -1,4 +1,4 @@
-sbin_PROGRAMS = stubby_ui_helper
-stubby_ui_helper_SOURCE = stubby_ui_helper.c
+sbin_PROGRAMS = stubby-ui-helper
+stubby_ui_helper_SOURCE = stubby-ui-helper.c
 
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
