Convert config file on windows
and only install stubby-setdns-macos.sh on macos

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,18 @@
 stubbyconfdir = $(sysconfdir)/stubby
 dist_stubbyconf_DATA = stubby.yml.example
+if ON_MACOS
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
+endif
+if ON_WINDOWS
+CONFIG_FILE = stubby.yml.windows
+else
+CONFIG_FILE = ${srcdir}/stubby.yml.example
+endif
 SUBDIRS=src
 
-install-data-hook:
+stubby.yml.windows: ${srcdir}/stubby.yml.example
+	sed 's/$$'"/`echo \\\r`/" $< > $@
+
+install-data-hook: $(CONFIG_FILE)
 	test -f ${stubbyconfdir}/stubby.yml || \
-		${INSTALL_DATA} ${srcdir}/stubby.yml.example ${stubbyconfdir}/stubby.yml
+		${INSTALL_DATA} $(CONFIG_FILE) ${stubbyconfdir}/stubby.yml
