Add authentication to Stubby Manager helper.

--- a/osx/Makefile.am
+++ b/osx/Makefile.am
@@ -1,4 +1,5 @@
 sbin_PROGRAMS = stubby-ui-helper
 stubby_ui_helper_SOURCE = stubby-ui-helper.c
+stubby_ui_helper_LDFLAGS = -framework Security
 
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
