Set stubby-ui-helper setuid and setgid on install.

--- a/osx/Makefile.am
+++ b/osx/Makefile.am
@@ -3,3 +3,6 @@ stubby_ui_helper_SOURCE = stubby-ui-helper.c
 stubby_ui_helper_LDFLAGS = -framework Security
 
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
+
+install-exec-hook:
+	chmod 6755 $(DESTDIR)$(sbindir)/stubby-ui-helper
