Use DESTDIR when installing stubby.yml file

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,5 +14,6 @@ stubby.yml.windows: ${srcdir}/stubby.yml.example
 	awk "{sub(/$$/,\"\r\")}1" $< > $@
 
 install-data-hook: $(CONFIG_FILE)
-	test -f ${stubbyconfdir}/stubby.yml || \
-		${INSTALL_DATA} $(CONFIG_FILE) ${stubbyconfdir}/stubby.yml
+	$(INSTALL) -m 755 -d $(DESTDIR)$(stubbyconfdir)
+	test -f $(DESTDIR)${stubbyconfdir}/stubby.yml || \
+		${INSTALL_DATA} $(CONFIG_FILE) $(DESTDIR)${stubbyconfdir}/stubby.yml
