--- a/osx/Makefile.am
+++ b/osx/Makefile.am
@@ -1,8 +1,6 @@
-sbin_PROGRAMS = stubby-ui-helper
+noinst_PROGRAMS = stubby-ui-helper
 stubby_ui_helper_SOURCE = stubby-ui-helper.c
 stubby_ui_helper_LDFLAGS = -framework Security
 
 dist_sbin_SCRIPTS = stubby-setdns-macos.sh
 
-install-exec-hook:
-	chmod 6755 $(DESTDIR)$(sbindir)/stubby-ui-helper
