--- a/osx/org.getdns.stubbydev.plist
+++ b/osx/org.getdns.stubbydev.plist
@@ -10,10 +10,8 @@
     <true/>
     <key>ProgramArguments</key>
     <array>
-      <string>/Applications/StubbyManager.app/Contents/MacOS/stubby</string>
+      <string>/usr/local/bin/stubby</string>
       <string>-l</string>
-      <string>-C</string>
-      <string>/Applications/StubbyManager.app/Contents/MacOS/stubby.yml</string>
     </array>
     <key>UserName</key>
     <string>root</string>
