--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,10 @@
 bin_PROGRAMS = stubby
 
-AUTOMAKE_OPTIONS = subdir-objects
-if WITH_YAML
-stubby_SOURCES = stubby.c yaml/convert_yaml_to_json.c sldns/sbuffer.c
-else
-stubby_SOURCES = stubby.c
+if GETDNS_LOCAL
+stubby_LDADD = $(top_builddir)/$(getdnslib)
+EXTRA_CFLAGS = -I$(top_builddir)/$(getdnsincdir)
 endif
-AM_CPPFLAGS = -DSTUBBYCONFDIR=\"$(sysconfdir)/stubby\" -DRUNSTATEDIR=\"$(runstatedir)\"
+
+AUTOMAKE_OPTIONS = subdir-objects
+stubby_SOURCES = stubby.c yaml/convert_yaml_to_json.c sldns/sbuffer.c
+stubby_CFLAGS = -DSTUBBYCONFDIR=\"$(sysconfdir)/stubby\" -DRUNSTATEDIR=\"$(runstatedir)\" $(EXTRA_CFLAGS)
