--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -74,6 +74,14 @@ round_robin_upstreams: 1
 # be configured configured manually. This can be done with unbound-anchor.
 # dnssec_return_status: GETDNS_EXTENSION_TRUE
 
+# Stubby tries to fetch and validate the DNSSEC root trust anchor on the fly
+# when needed (Zero configuration DNSSEC), but only if it can store it.
+# The default location to store these files is the ".getdns" subdirectory in
+# the user's home directory, but when stubby runs as a special user without
+# a home directory (such as in setups using systemd), a directory needs to
+# be provided that is writable (and readable) by that special system user.
+# appdata_dir: "/run/stubby"
+
 # Specify the location of the installed trust anchor file (leave commented out
 # for zero configuration DNSSEC)
 # dnssec_trust_anchors: "/etc/unbound/getdns-root.key"
