Require dnssec verification with the dnssec extension

--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -104,9 +104,8 @@ listen_addresses:
   - 0::1
 
 ############################### DNSSEC SETTINGS ################################
-# Require DNSSEC validation. For releases earlier than 1.2 a trust anchor must
-# be configured configured manually. This can be done with unbound-anchor.
-# dnssec_return_status: GETDNS_EXTENSION_TRUE
+# Require DNSSEC validation.
+# dnssec: GETDNS_EXTENSION_TRUE
 
 # Stubby tries to fetch and validate the DNSSEC root trust anchor on the fly
 # when needed (Zero configuration DNSSEC), but only if it can store then
@@ -115,6 +114,7 @@ listen_addresses:
 # the .getdns subdirectory could not be created (or is not present), Stubby
 # will fall back to the current working directory to try to store the
 # trust-anchor files.
+#
 # When stubby runs as a special system-level user without a home directory
 # however (such as in setups using systemd), it is recommended that an explicit
 # location for storing the trust-anchor files is provided that is writable (and
